syntax = "proto3";

package spark.v1;

message RunJobRequest {
  // name of the job
  string name = 1;
  // namespace of the job
  string namespace = 2;
  // image of the job
  string image = 3;
  // command of the job
  string command = 4;
}

message RunJobResponse {
  // job id
  string id = 1;
  // job name
  string name = 2;
  // job namespace
  string namespace = 3;
  // job image
  string image = 4;
  // job command
  string command = 5;
  // job status
  string status = 6;
  // job created time
  string created = 7;
  // job started time
  string started = 8;
  // job finished time
  string finished = 9;
  // job logs
  string logs = 10;
}
